[tool.poetry]
name = "testagent"
version = "0.1.0"
description = ""
authors = ["funashi55 <pinkgreen0304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.60"
langchain-openai = "^0.2.14"
tavily-python = "^0.5.0"
langchain-community = "^0.3.14"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
